Added http requests functionality. Still working on this.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:parcel": "npx parcel index.html"
+    "start:parcel": "npx parcel index.html",
+    "start:db": "json-server -w db.json"
   },
   "author": "",
   "license": "ISC",
